# discord-swear-detection-bot

./: .gitignore  README.md  pyproject.toml
deploy/: docker-compose.yml  nginx.conf
src/: dockerfile  makefile  manage.py
src/discord_bot/: admin.py  models.py
src/discord_bot/management/commands/: discord_bot.py
src/discord_bot/migrations/: 0001_initial.py
src/discord_bot/utils/discord_integration/: admin_check.py  commands.py  events.py  token.py  update_metadata.py
src/discord_bot/utils/handlers/: swear_handlers.py
src/discord_bot_project/: .dev.env  asgi.py  settings.py  urls.py  wsgi.py
